[package]
name = "nostr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.26"
tokio = {version = "1.25.0", features= ["full"]}
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tokio-tungstenite = { version = "*", features = ["native-tls"] }
url = "*"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
hex = "0.4.3"
thiserror = "1.0.38"
k256 = "0.12.0"
env_logger = "0.10.0"
log = "0.4.17"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "sqlite"] }
dotenv = "0.15.0"
